--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
                     id="numPlanets"
                     value="12"
                 />
-                <span id="numPlanetsValue">12</span>
+                <output id="numPlanetsValue">12</output>
             </fieldset>
 
             <fieldset>
                 <label for="speed">Geschwindigkeit:</label>
-                <input type="range" min="1" max="100" id="speed" value="20" />
+                <input type="range" min="1" max="200" id="speed" value="20" />
                 <span id="speedValue">20%</span>
             </fieldset>
         </section>
