changed <span> to <output> for more semantic html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <fieldset>
                 <label for="speed">Geschwindigkeit:</label>
                 <input type="range" min="1" max="200" id="speed" value="20" />
-                <span id="speedValue">20%</span>
+                <output id="speedValue">20%</output>
             </fieldset>
         </section>
     </body>
