added second playground 'solar system'

--- a/index.html
+++ b/index.html
@@ -4,29 +4,13 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
-        <script src="https://cdn.jsdelivr.net/npm/p5@1.11.8/lib/p5.min.js"></script>
-        <script defer src="sketch.js"></script>
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <section id="control">
-            <fieldset>
-                <label for="numPlanets">Anzahl Kreise:</label>
-                <input
-                    type="range"
-                    min="1"
-                    max="50"
-                    id="numPlanets"
-                    value="12"
-                />
-                <output id="numPlanetsValue">12</output>
-            </fieldset>
-
-            <fieldset>
-                <label for="speed">Geschwindigkeit:</label>
-                <input type="range" min="1" max="200" id="speed" value="20" />
-                <output id="speedValue">20%</output>
-            </fieldset>
-        </section>
+        <h1>P5 Spielereien</h1>
+        <ul>
+            <li><a href="intro.html">Intro</a></li>
+            <li><a href="sol-system.html">Solar System</a></li>
+        </ul>
     </body>
 </html>
