added link to github

--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
         <h1>P5 Spielereien</h1>
         <ul>
             <li><a href="intro.html">Intro</a></li>
-            <li><a href="sol-system.html">Solar System</a></li>
+            <li><a href="sol-system.html">Solar System</a> (in progress)</li>
         </ul>
+        <p>
+            Quellcode:
+            <a
+                href="https://github.com/coffeepyros/p5"
+                target="_blank"
+                rel="noopener noreferrer"
+                >https://github.com/coffeepyros/p5</a
+            >
+        </p>
     </body>
 </html>
