start of abstraction

--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <h1>P5 Spielereien</h1>
+        <h1>p5.js Spielereien</h1>
         <ul>
-            <li><a href="intro.html">Intro</a></li>
-            <li><a href="sol-system.html">Solar System</a> (in progress)</li>
+            <li><a href="intro.html">Intro</a> (circling circles)</li>
+            <li>
+                <a href="sol-system.html">Solar System</a> (next step is
+                thinking about 3D)
+            </li>
+            <li><a href="fraktal1.html">Fractals</a></li>
         </ul>
         <p>
             Quellcode:
